# dove

./: .gitignore  CMakeLists.txt  README.md  fast_win.cpp  figure_600.json  hockey_4nylander.json  main.cpp  run.sh  stab.hpp  stab_2dof.cpp  stab_6dof.cpp
darknet/: darknet  libdarknet.dylib  yolo_v2_class.hpp
py/: dove.py  filter.py  mser.py  video_mover.py  visualize_traj.py
src/: Algebra.cpp  Algebra.hpp  ColorTracking.cpp  ColorTracking.hpp  DefData.hpp  Detection.cpp  Detection.hpp  ExpUtil.cpp  ExpUtil.hpp  GodStabil.cpp  GodStabil.hpp  GrayTracking.cpp  GrayTracking.hpp  Stabilization.cpp  Stabilization.hpp  Tracking.cpp  Tracking.hpp  TwoPassStabilizer.cpp  TwoPassStabilizer.hpp  fast_win.cpp  stab.hpp  stab_2dof.cpp  stab_6dof.cpp  stab_live.cpp  stab_pathsmoothe.cpp  videostab.cpp  videostab.h
src/common/: TimeUtil.cpp
